# forge

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .lycheeignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPRECATIONS.md  LICENSE  README.md  SCORECARD.md  SECURITY.md  SHIP_ORDER.md  install.ps1  install.sh  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  otel-collector-config.yaml  release.yml
agents/: architecture-reviewer.md  backend-performance-reviewer.md  be-hex-reviewer.md  be-security-reviewer.md  code-quality-reviewer.md  docs-consistency-reviewer.md  fe-code-reviewer.md  fe-deprecation-scanner.md  fg-010-shaper.md  fg-015-scope-decomposer.md  fg-020-bug-investigator.md  fg-021-hypothesis-investigator.md  fg-050-project-bootstrapper.md  fg-090-sprint-orchestrator.md  fg-100-orchestrator-boot.md  fg-100-orchestrator-core.md  fg-100-orchestrator-execute.md  fg-100-orchestrator-ship.md  fg-100-orchestrator.md  fg-101-worktree-manager.md  fg-102-conflict-resolver.md  fg-103-cross-repo-coordinator.md  fg-130-docs-discoverer.md  fg-135-wiki-generator.md  fg-140-deprecation-refresh.md  fg-143-observability-bootstrap.md  fg-150-test-bootstrapper.md  fg-155-i18n-validator.md  fg-160-migration-planner.md  fg-200-planner.md  fg-205-plan-judge.md  fg-205-planning-critic.md  fg-210-validator.md  fg-250-contract-validator.md  fg-300-implementer.md  fg-301-implementer-critic.md  fg-301-implementer-judge.md  fg-302-diff-judge.md  fg-310-scaffolder.md  fg-320-frontend-polisher.md  (+64 more)
benchmarks/: compression-eval.sh  count-tokens.py  prompts.json
docs/: support-tiers.md
evals/: run-evals.py
hooks/: automation-trigger-hook.sh  automation-trigger.sh  automation_trigger.py  feedback-capture.sh  forge-checkpoint.sh  hooks.json  pipeline-checkpoint.sh  post_tool_use.py  post_tool_use_agent.py  post_tool_use_skill.py  pre_tool_use.py  session-start.sh  session_start.py  stop.py
modules/: COMPOSITION.md
scripts/: gen-learnings-index.py  migrate_learnings_schema.py
shared/: README.md  __init__.py  a2a-http-transport.md  a2a-protocol.md  ac-extractor.py  accessibility-automation.md  agent-colors.md  agent-communication.md  agent-consolidation-analysis.md  agent-defaults.md  agent-philosophy.md  agent-registry.md  agent-role-hierarchy.md  agent-ui.md  agents.md  ask-user-question-patterns.md  automations.md  background-execution.md  bootstrap-detect.py  cache-integrity.md  caveman-benchmark.sh  check-environment.sh  check-prerequisites.sh  check_environment.py  check_prerequisites.py  composition-matrix.md  composition.md  compression-validation.py  confidence-scoring.md  config-diff.sh  config-schema.json  (+108 more)
(+2882 files in other folders)
