[project]
name = "forge-plugin"
version = "4.0.0"
description = "Claude Code plugin: 10-stage autonomous pipeline (forge)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }

[project.optional-dependencies]
otel = [
  "opentelemetry-api>=1.41.0",
  "opentelemetry-sdk>=1.41.0",
  "opentelemetry-exporter-otlp>=1.41.0",
]
test = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "pytest>=8.0",
  "jsonschema>=4.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["modules/", "agents/", "skills/", "docs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled elsewhere

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/contract"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-ra"
